# compatibility-report

./: .gitignore  .gitmodules  Dockerfile
include/: test_data.hpp
runner/: CMakeLists.txt  config.json
runner/src/: main.cpp
src/: main.cpp
